manifest/kubernetes/nexus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: nexus3
spec:
  ingressClassName: nginx
  rules:
  - host: nexus.kubeop.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nexus3
              port:
                number: 8081
  tls:
  - hosts:
    - nexus.kubeop.com
    secretName: kubeop-com
